--- a/NodeJs/NodeExamples/package.json
+++ b/NodeJs/NodeExamples/package.json
@@ -1,12 +1,12 @@
 {
   "name": "node-examples",
   "version": "1.0.0",
-  "description": "\"Simple Node Examples:",
+  "description": "Simple Node Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
   },
-  "author": "Priya Ranjan Kumar",
+  "author": "priyaranjan",
   "license": "ISC"
 }
